@@ -45,7 +45,7 @@ import net.semanticmetadata.lire.AbstractDocumentBuilder;
 import net.semanticmetadata.lire.DocumentBuilder;
 import org.apache.lucene.document.Document;
 import org.apache.lucene.document.Field;
-import org.apache.lucene.document.StoredField;
+import org.apache.lucene.document.StringField;
 
 import java.awt.image.BufferedImage;
 import java.io.FileNotFoundException;
@@ -98,7 +98,7 @@ public class ChainedDocumentBuilder extends AbstractDocumentBuilder {
         docsCreated = true;
         Document doc = new Document();
         if (identifier != null)
-            doc.add(new StoredField(DocumentBuilder.FIELD_NAME_IDENTIFIER, identifier));
+            doc.add(new StringField(DocumentBuilder.FIELD_NAME_IDENTIFIER, identifier, Field.Store.YES)); // changed to StringField based on the suggestions of Berthold Daum <berthold.daum@bdaum.de>
         if (builders.size() >= 1) {
             for (DocumentBuilder builder : builders) {
                 Field[] fields = builder.createDescriptorFields(image);
